--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,44 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  position: relative;
+  margin: 0;
+  top: 0;
+  left: 0;
+  max-width: 100%;
+  background-color: rgba($color: #000000, $alpha: 0.8);
+
+  p {
+    margin: 0;
+  }
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+body::-webkit-scrollbar {
+  width: 12px;
+}
+
+body::-webkit-scrollbar-track {
+  background: rgba(37, 53, 85, 0.5);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #c2185b;
+  border-radius: 10px;
+  border: 3px solid transparent;
+}
+h1,
+h2 {
+  color: white;
+}
