--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,2 @@
-<app-landing-page></app-landing-page>
-<app-new-movies></app-new-movies>
-<app-facts></app-facts>
-
-
-<app-faq></app-faq>
-
-
+<router-outlet></router-outlet>
 <app-footer></app-footer>
