--- a/src/app/landing/landing-page/landing-page.component.html
+++ b/src/app/landing/landing-page/landing-page.component.html
@@ -1,22 +1,4 @@
-<div class="landing_background">
-</div>
-
-<div class="center_landing">
-    <button mat-raised-button color="accent" class="landing-login">EINLOGGEN</button>
-
-    <h1 style="font-size: 38px;">Genieße brandneue Originale, Blockbuster, Serien mit Suchtfaktor und vieles mehr im
-        Streaming</h1>
-    <h2>Um die Vielfalt von Videoflix vollständig zu erkunden oder neu zu beginnen, trage bitte deine E-Mail-Adresse
-        ein.</h2>
-    <form class="landing-form">
-        <mat-form-field class="landing-full-width">
-            <input matInput placeholder="E-Mail">
-        </mat-form-field>
-        <button mat-raised-button color="primary">Jetzt Registrieren</button>
-    </form>
-    <button mat-raised-button color="accent" class="landing-login-guest">Gast Login</button>
-    <h2>Ergreife noch heute diese großartige Gelegenheit und sichere dir jetzt unser exklusives kostenloses Angebot.
-    </h2>
-
-</div>
-<a href="#new-movies"><mat-icon class="landing-arrow" fontIcon="keyboard_arrow_down"></mat-icon></a>
+<app-hero></app-hero>
+<app-new-movies></app-new-movies>
+<app-facts></app-facts>
+<app-faq></app-faq>
