--- a/src/app/landing/new-movies/new-movies.component.scss
+++ b/src/app/landing/new-movies/new-movies.component.scss
@@ -5,17 +5,20 @@
   flex-direction: column;
   padding: 25px;
   max-width: 100%;
+  height: fit-content;
   img {
     margin-top: 40px;
     margin-bottom: 40px;
     width: 100%;
   }
   h1,
-  h2 {
+  h3 {
     margin: 30px;
     text-align: center;
+    width: 100%;
   }
   h1 {
     font-size: 38px;
+    line-height: 120%;
   }
 }
