--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,7 +30,7 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-  background: rgba(37, 53, 85, 0.5);
+  background: #333333;
 }
 
 body::-webkit-scrollbar-thumb {
