--- a/src/app/landing/hero/hero.component.scss
+++ b/src/app/landing/hero/hero.component.scss
@@ -18,10 +18,32 @@
 
 .landing-login {
   position: absolute;
-
   top: 20px;
   right: 30px;
+  @media (max-width: 600px), (max-height: 600px){
+    display: none;
+  }
 }
+  
+.landing-login-smart {
+  display:none;
+  @media (max-width: 600px), (max-height: 600px){
+    display: block;
+  }
+
+}
+
+.landing-buttons{
+  @media (max-width: 600px), (max-height: 600px){
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+}
+
+
 .center_landing {
   position: relative;
   display: flex;
@@ -32,6 +54,8 @@
   color: white;
   text-align: center;
   gap: 10px;
+  padding: 25px;
+  padding-bottom: 0;
   h1,
   h2 {
     line-height: 120%;
@@ -44,6 +68,7 @@
   position: relative;
   display: flex;
   width: 500px;
+  transition: all 0.2s ease;
 
   button {
     height: 56px;
@@ -53,6 +78,7 @@
     border-bottom-right-radius: 0;
   }
   @media (max-width: 600px) {
+    transition: all 0.2s ease;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -94,6 +120,11 @@
   color: #c2185b;
   bottom: 100px;
   animation: jump 4s ease-in-out infinite; /* Die Animation dauert nun 4 Sekunden insgesamt (2 Sekunden für den Sprung und 2 Sekunden für die Pause) */
+
+  @media (max-width: 600px), (max-height: 600px){
+    justify-content: end;
+    opacity: 0.5;
+  }
 }
 
 @keyframes jump {
