--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,4 +41,17 @@ body::-webkit-scrollbar-thumb {
 h1,
 h2 {
   color: white;
+  transition: all 0.2s ease;
 }
+
+h1 {
+  @media (max-width: 600px), (max-height: 600px) {
+    transition: all 0.2s ease;
+    font-size: 24px  !important;
+  }
+}
+h2{
+  @media (max-width: 600px), (max-height: 600px) {
+    transition: all 0.2s ease;
+    font-size: 18px !important;
+  }}
