--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,7 +39,8 @@ body::-webkit-scrollbar-thumb {
   border: 3px solid transparent;
 }
 h1,
-h2 {
+h2,
+h3 {
   color: white;
   transition: all 0.2s ease;
 }
@@ -47,11 +48,24 @@ h2 {
 h1 {
   @media (max-width: 600px), (max-height: 600px) {
     transition: all 0.2s ease;
-    font-size: 24px  !important;
+    font-size: 24px !important;
   }
 }
-h2{
+h2 {
   @media (max-width: 600px), (max-height: 600px) {
     transition: all 0.2s ease;
     font-size: 18px !important;
-  }}
+  }
+}
+
+span {
+  color: white;
+  a {
+    color: white;
+    text-decoration: none;
+  }
+}
+
+p {
+  color: white;
+}
