--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -10,11 +10,11 @@
                     erstellen.
                 </h3>
             </mat-card-content>
-            <form class="login-form">
+            <form class="login-form" (ngSubmit)="submitForm()">
                 <mat-form-field class="login-full-width">
                     <mat-label>Email</mat-label>
                     <input type="email" matInput [formControl]="emailFormControl">
-                    @if (emailFormControl.hasError('email') && !emailFormControl.hasError('required')) {
+                    @if (emailFormControl.hasError('pattern') && !emailFormControl.hasError('required')) {
                     <mat-error>Please enter a valid email address</mat-error>
                     }
                     @if (emailFormControl.hasError('required')) {
@@ -22,7 +22,7 @@
                     }
                 </mat-form-field>
                 <button mat-fab extended color="primary">
-                    <a href="enter-passwort">Weiter</a>
+                    Weiter
                 </button>
             </form>
         </mat-card>
