--- a/src/app/account/completely/completely.component.html
+++ b/src/app/account/completely/completely.component.html
@@ -2,12 +2,11 @@
     <div class="completely">
         <mat-card class="completely-card">
             <mat-card-header>
-                <mat-card-subtitle>3. SCHRITT</mat-card-subtitle>
+                <mat-card-subtitle>{{set_headline}}</mat-card-subtitle>
             </mat-card-header>
             <mat-card-content>
-                <h1>Bestätige deine E-Mail</h1>
-                <h3>Bitte prüfe dein E-Mail Postfach und bestätige den darinenhaltenen Link.
-                </h3>
+                <h1>{{set_header}}</h1>
+                <h3> {{set_text}} </h3>
             </mat-card-content>
             <a href="/"><button mat-fab extended color="primary">
                     Zurück zur Startseite
