--- a/src/app/account/enter-passwort/enter-passwort.component.html
+++ b/src/app/account/enter-passwort/enter-passwort.component.html
@@ -24,7 +24,7 @@
                     Einloggen
                 </button>
             </form>
-            <a class="reset-passwort" href="">Probleme beim Einloggen? Setze hier dein Passwort zurück</a>
+            <span class="reset-passwort" (click)="resetPasswort()">Probleme beim Einloggen? Setze hier dein Passwort zurück</span>
         </mat-card>
 
     </div>
