add new components

--- a/src/app/templates/footer/footer.component.html
+++ b/src/app/templates/footer/footer.component.html
@@ -4,10 +4,9 @@
         <span>VideoFlix</span>
     </div>
     <div class="footer-links">
-        <a href="#">Datenschutzerklärung</a>
-        <a href="#">Impressum</a>
-        <a href="#">Cookie-Richtlinie</a>
-        <a href="#">Logout</a>
+        <a href="privacy-policy">Datenschutzerklärung</a>
+        <a href="imprint">Impressum</a>
+        <a href="cookie-policy">Cookie-Richtlinie</a>
     </div>
     <p>© Tony Tech 2023</p>
 </div>
