--- a/src/app/templates/header/header.component.html
+++ b/src/app/templates/header/header.component.html
@@ -53,8 +53,8 @@
     </div>
     <div class="profil">
         <span>ttech</span>
-        <img src="/assets/img/woman-995164_640.png" alt="" [matMenuTriggerFor]="menu">
-        <mat-menu #menu="matMenu">
+        <img src="/assets/img/woman-995164_640.png" alt="" [matMenuTriggerFor]="menu_profile">
+        <mat-menu #menu_profile="matMenu">
             <button mat-menu-item>Profil bearbeiten</button>
             <button mat-menu-item>Konto</button>
             <button mat-menu-item>Hilfe-Center</button>
