--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import "bootstrap/dist/css/bootstrap.min.css";
+
 html {
   scroll-behavior: smooth;
 }
@@ -9,7 +11,7 @@ body {
   top: 0;
   left: 0;
   max-width: 100%;
-  background-color: rgba($color: #000000, $alpha: 0.8);
+  background-color: rgba($color: #000000, $alpha: 0.8) !important;
 
   p {
     margin: 0;
@@ -68,4 +70,22 @@ span {
 
 p {
   color: white;
+}
+
+.carousel-indicators {
+  margin-bottom: 2rem;
+  display: flex;
+  justify-content: end;
+  button {
+    margin-left: 10px;
+    margin-right: 10px;
+    height: 10px !important;
+    width: 10px !important;
+    border: 0;
+    border-radius: 100%;
+    background-color: #333333;
+  }
+  button.active {
+    background-color: #e4e4e4;
+  }
 }
