works at home and upload

--- a/src/app/account/enter-passwort/enter-passwort.component.html
+++ b/src/app/account/enter-passwort/enter-passwort.component.html
@@ -5,7 +5,7 @@
                 <mat-card-subtitle>2. SCHRITT</mat-card-subtitle>
             </mat-card-header>
             <mat-card-content>
-                <h1>Passwort eingeben</h1>
+                <h2>Passwort eingeben</h2>
                 <h3>Logge dich mit deiner E-Mail-Adresse in dein Konto ein: <i class="email-change">{{email}}</i> <span
                         (click)="changeMail()">(bearbeiten)</span>
                 </h3>
@@ -24,7 +24,8 @@
                     Einloggen
                 </button>
             </form>
-            <span class="reset-passwort" (click)="resetPasswort()">Probleme beim Einloggen? Setze hier dein Passwort zurück</span>
+            <span class="reset-passwort" (click)="resetPasswort()">Probleme beim Einloggen? Setze hier dein Passwort
+                zurück</span>
         </mat-card>
 
     </div>
