--- a/src/app/account/rest-passwort/rest-passwort.component.html
+++ b/src/app/account/rest-passwort/rest-passwort.component.html
@@ -5,8 +5,9 @@
                 <mat-card-subtitle>Passwort zurücksetzen</mat-card-subtitle>
             </mat-card-header>
             <mat-card-content>
-                <h1>Gib deine E-mail-Adresse ein, um fortzufahren</h1>
-                <h3>Wir werden dir eine E-Mail zusenden in der weiter Anweisungen stehen. Bitte prüfe auch dein Spam Ordner im E-mail Postfach.
+                <h2>Gib deine E-mail-Adresse ein, um fortzufahren</h2>
+                <h3>Wir werden dir eine E-Mail zusenden in der weiter Anweisungen stehen. Bitte prüfe auch dein Spam
+                    Ordner im E-mail Postfach.
                 </h3>
             </mat-card-content>
             <form class="reset-passwort-form" (ngSubmit)="submitForm()">
