--- a/src/app/content/home/home.component.html
+++ b/src/app/content/home/home.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
 <app-slideshow></app-slideshow>
-<app-category></app-category>
+<app-category-header></app-category-header>
+<app-category-content></app-category-content>
 <app-footer></app-footer>
