--- a/src/app/content/serch/serch.component.html
+++ b/src/app/content/serch/serch.component.html
@@ -1,1 +1,42 @@
-<p>serch works!</p>
+<app-header></app-header>
+
+<form class="example-form">
+    <mat-form-field class="example-full-width">
+        <mat-label>Title, Charakter oder Genre suchen</mat-label>
+        <input matInput placeholder="Title, Charakter oder Genre suchen">
+    </mat-form-field>
+</form>
+
+<div class="content">
+    <div class="content-boxing ">
+        <div class="content-draggable" id="content-box">
+            <div class="content-box">
+                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
+            </div>
+            <div class="content-box">
+                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
+            </div>
+            <div class="content-box">
+                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
+            </div>
+            <div class="content-box">
+                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
+            </div>
+            <div class="content-box">
+                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
+            </div>
+            <div class="content-box">
+                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
+            </div>
+            <div class="content-box">
+                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
+            </div>
+            <div class="content-box">
+                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<app-footer></app-footer>
