--- a/src/app/content/movies/movies.component.html
+++ b/src/app/content/movies/movies.component.html
@@ -1,1 +1,36 @@
-<p>movies works!</p>
+<app-header></app-header>
+
+<div class="content">
+    <h1>Filme</h1>
+    <div class="content-boxing ">
+
+        <div class="content-draggable" id="content-box">
+            <div class="content-box">
+                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
+            </div>
+            <div class="content-box">
+                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
+            </div>
+            <div class="content-box">
+                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
+            </div>
+            <div class="content-box">
+                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
+            </div>
+            <div class="content-box">
+                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
+            </div>
+            <div class="content-box">
+                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
+            </div>
+            <div class="content-box">
+                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
+            </div>
+            <div class="content-box">
+                <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<app-footer></app-footer>
