--- a/src/app/module/slideshow/slideshow.component.scss
+++ b/src/app/module/slideshow/slideshow.component.scss
@@ -29,6 +29,11 @@ c-carousel {
   justify-content: space-between;
   overflow: hidden;
   width: 250%;
+
+  @media (max-width: 600px) {
+    left: 0;
+    width: 100%;
+  }
 }
 
 c-carousel-item {
@@ -40,11 +45,16 @@ c-carousel-item {
   border-radius: 10px;
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4) !important;
   margin-bottom: 15px;
+  transition: all 0.2s ease;
   &:hover {
     cursor: pointer;
     border: 5px solid rgba(255, 255, 255, 0.5);
     border-radius: 10px;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0) !important;
+    transition: all 0.2s ease;
+  }
+  a {
+    z-index: 50;
   }
 }
 
@@ -53,10 +63,75 @@ c-carousel-item {
   border: 5px solid #333333;
   border-radius: 10px;
   margin-bottom: 15px;
+  @media (max-width: 600px) {
+    display: none;
+  }
+}
+
+.left {
+  animation: fadeInFromLeft 2s ease-out; /* Du kannst die Dauer und die Timing-Funktion anpassen */
+}
+
+@keyframes fadeInFromLeft {
+  from {
+    transform: translateX(-200%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.right {
+  animation: fadeInFromRight 2s ease-out; /* Du kannst die Dauer und die Timing-Funktion anpassen */
+}
+
+@keyframes fadeInFromRight {
+  from {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 
 .img-carousel {
   object-fit: cover;
   height: 100%;
   border-radius: 10px;
+}
+
+c-carousel-caption {
+  display: flex !important;
+  justify-content: center !important;
+  flex-direction: column !important;
+  height: 100%;
+  text-align: left;
+  left: 0;
+  margin-left: 100px;
+  gap: 10px;
+  text-shadow: 2px 2px 4px #000000;
+  h3 {
+    font-size: 5vw;
+    line-height: 120%;
+  }
+  p {
+    font-size: 2vw;
+    line-height: 105%;
+  }
+
+  @media (max-width: 600px) {
+    margin-left: 25px;
+    h3 {
+      font-size: 2rem;
+      line-height: 120%;
+    }
+    p {
+      font-size: 1rem;
+      line-height: 105%;
+    }
+  }
 }
