--- a/src/app/templates/footer/footer.component.scss
+++ b/src/app/templates/footer/footer.component.scss
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  background-color: #262626;
 
   p {
     text-align: center;
