--- a/src/app/templates/header/header.component.scss
+++ b/src/app/templates/header/header.component.scss
@@ -1,9 +1,14 @@
 .header {
+  overflow: visible;
+  position: sticky;
+  width: 100%;
+  top: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 72px;
-  background-color: #242424dc;
+  min-height: 72px;
+  background-color: #242424;
+  z-index: 1000;
   img {
     margin-left: 30px;
     height: 72px;
@@ -58,6 +63,30 @@ a {
     background-color: #333333;
     &:hover {
       cursor: pointer;
+    }
+  }
+  span {
+    margin-left: 15px;
+  }
+  @media (max-width: 600px) {
+    span {
+      display: none;
+    }
+  }
+}
+
+.profil-name {
+  border: 0;
+  margin: 0;
+  p {
+    display: none;
+  }
+  @media (max-width: 600px) {
+    p {
+      display: block;
+
+      padding-left: 18px;
+      border-bottom: 1px solid rgb(177, 177, 177);
     }
   }
 }
