--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import "bootstrap/dist/css/bootstrap.min.css";
+:root {
+  --min-font-size: 16px; // Mindest-Schriftgröße
+  --max-font-size: 24px; // Maximale Schriftgröße
+}
 
 html {
   scroll-behavior: smooth;
@@ -8,8 +12,7 @@ html {
 body {
   position: relative;
   margin: 0;
-  top: 0;
-  left: 0;
+
   max-width: 100%;
   background-color: rgba($color: #000000, $alpha: 0.8) !important;
 
@@ -18,10 +21,6 @@ body {
   }
 }
 
-html,
-body {
-  height: 100%;
-}
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
@@ -48,16 +47,15 @@ h3 {
 }
 
 h1 {
-  @media (max-width: 600px), (max-height: 600px) {
-    transition: all 0.2s ease;
-    font-size: 24px !important;
-  }
+  font-size: calc(32px + 2vw) !important;
 }
 h2 {
-  @media (max-width: 600px), (max-height: 600px) {
-    transition: all 0.2s ease;
-    font-size: 18px !important;
-  }
+  font-size: calc(18px + 1.75vw) !important;
+  line-height: 120% !important;
+}
+h3 {
+  font-size: calc(12px + 0.5vw) !important;
+  line-height: 120% !important;
 }
 
 span {
