--- a/src/app/module/category/category-for-you/category-for-you.component.html
+++ b/src/app/module/category/category-for-you/category-for-you.component.html
@@ -3,7 +3,7 @@
     <div class="content-boxing ">
         <div class="content-draggable" id="content-box">
             <div class="content-box">
-                <a href="/single-view"><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
+                <img (click)="showMovie('single-view')" src="assets/img/test_poster/badging.jpeg" alt="">
             </div>
             <div class="content-box">
                 <a href=""><img src="assets/img/test_poster/badging.jpeg" alt=""></a>
