--- a/src/app/templates/footer/footer.component.scss
+++ b/src/app/templates/footer/footer.component.scss
@@ -1,4 +1,6 @@
 .footer {
+  -webkit-box-shadow: 0px 0px 13px 13px #242424;
+  box-shadow: 0px 0px 13px 13px #242424;
   padding: 25px;
   display: flex;
   justify-content: center;
