--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -24,7 +24,11 @@
                 <button mat-fab extended color="primary">
                     Weiter
                 </button>
+
             </form>
+            <button style="margin-left: 16px;margin-right: 16px;" (click)="goBack()" mat-fab extended color="">
+                zurück
+            </button>
         </mat-card>
     </div>
     <app-footer></app-footer>
