--- a/src/app/account/login/login.component.scss
+++ b/src/app/account/login/login.component.scss
@@ -29,7 +29,7 @@
   flex-direction: column;
   padding: 16px;
   button {
-    margin-top: 50px;
+    margin-bottom: 25px;
     width: 100%;
   }
   a {
