--- a/src/app/templates/header/header.component.scss
+++ b/src/app/templates/header/header.component.scss
@@ -1,4 +1,6 @@
 .header {
+  -webkit-box-shadow: 0px 0px 13px 13px #242424;
+  box-shadow: 0px 0px 13px 13px #242424;
   overflow: visible;
   position: sticky;
   width: 100%;
