--- a/src/app/templates/header/dialog/profil-account.html
+++ b/src/app/templates/header/dialog/profil-account.html
@@ -1,19 +1,17 @@
 <div class="profil-account">
-    <h1 mat-dialog-title>Profil</h1>
+    <h2 mat-dialog-title>Profil</h2>
     <div mat-dialog-content>
         Das ist dein Profil. Ändere hier die Einstellungen.
     </div>
     <div mat-dialog-content>
         <div class="border-dialog">
-
             <form class="profil-form">
-                <h2 class="profil-h2">Profil Name</h2>
+                <h3 class="profil-h3">Profil Name</h3>
                 <mat-form-field class="example-full-width">
                     <mat-label>Profil Name</mat-label>
                     <input matInput placeholder="Gebe dein Profilnamen ein" value="ttech">
                 </mat-form-field>
-
-                <h2 class="profil-h2">Optionen</h2>
+                <h3 class="profil-h3">Optionen</h3>
                 <mat-card-content>
                     <section class="profil-slider">
                         <mat-slide-toggle class="example-margin" [color]="color" [checked]="checked"
@@ -22,7 +20,7 @@
                         </mat-slide-toggle>
                     </section>
                 </mat-card-content>
-                <h2 class="profil-h2">Sprache</h2>
+                <h3 class="profil-h3">Sprache</h3>
                 <mat-form-field>
                     <mat-label>Sprache</mat-label>
                     <input type="text" placeholder="Pick one" aria-label="Number" matInput [formControl]="myControl"
@@ -33,35 +31,18 @@
                         }
                     </mat-autocomplete>
                 </mat-form-field>
-
-
-
-                <h2 class="profil-h2">Freigabe</h2>
+                <h3 class="profil-h3">Freigabe</h3>
                 <mat-chip-listbox aria-label="Fish selection">
                     <mat-chip-option>Keine Altersfreigabe</mat-chip-option>
                     <mat-chip-option>Altersfreigabe ab 6</mat-chip-option>
                     <mat-chip-option>Altersfreigabe ab 12</mat-chip-option>
                     <mat-chip-option>Altersfreigabe ab 18</mat-chip-option>
                 </mat-chip-listbox>
-
-
-
-
-
             </form>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
     <div mat-dialog-actions align="center">
         <button mat-button mat-dialog-close>Schließen</button>
-        <button mat-button>Speichern</button>
+        <button mat-raised-button color="primary">Speichern</button>
     </div>
 </div>
