--- a/src/app/templates/header/dialog/dialog.style.scss
+++ b/src/app/templates/header/dialog/dialog.style.scss
@@ -11,7 +11,7 @@ form {
 mat-form-field {
   width: 100%;
 }
-.profil-h2 {
+.profil-h3 {
   text-align: left;
   width: 100%;
 }
@@ -32,4 +32,7 @@ mat-slide-toggle {
   justify-content: flex-start;
   flex-direction: column;
   width: 100%;
+}
+h2 {
+  margin-top: 20px;
 }
