--- a/src/app/templates/header/dialog/konto-account.html
+++ b/src/app/templates/header/dialog/konto-account.html
@@ -1,5 +1,5 @@
 <div class="konto-account">
-    <h1 mat-dialog-title>Account</h1>
+    <h2 mat-dialog-title>Account</h2>
     <div mat-dialog-content>
         Kontoinformationen bearbeiten
         <div class="border-dialog">
@@ -30,6 +30,6 @@
     </div>
     <div mat-dialog-actions align="center">
         <button mat-button mat-dialog-close>Abbrechen</button>
-        <button mat-button cdkFocusInitial>Speichern</button>
+        <button mat-raised-button cdkFocusInitial color="primary">Speichern</button>
     </div>
 </div>
