--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -16,7 +16,7 @@
             <form class="register-form" (ngSubmit)="submitForm()">
                 <mat-form-field>
                     <mat-label>Your Name</mat-label>
-                    <input matInput>
+                    <input matInput [formControl]="name">
                 </mat-form-field>
                 <mat-form-field id="email-input" class="dn">
                     <mat-label>Enter your email</mat-label>
@@ -29,16 +29,16 @@
                 </mat-form-field>
                 <mat-form-field>
                     <mat-label>Enter your password</mat-label>
-                    <input matInput [type]="hide ? 'password' : 'text'" required [formControl]="passwort1">
-                    @if (passwort1.invalid) {<mat-error>{{getErrorMessagePasswort1()}}</mat-error>}
-                    @if (passwort1.valid) { <mat-icon matSuffix>check</mat-icon>}
+                    <input matInput [type]="hide ? 'password' : 'text'" required [formControl]="password1">
+                    @if (password1.invalid) {<mat-error>{{getErrorMessagepassword1()}}</mat-error>}
+                    @if (password1.valid) { <mat-icon matSuffix>check</mat-icon>}
                     <mat-hint>{{password_incorrect}}</mat-hint>
                 </mat-form-field>
                 <mat-form-field>
                     <mat-label>Enter your password again</mat-label>
-                    <input matInput [type]="hide ? 'password' : 'text'" required [formControl]="passwort2">
-                    @if (passwort2.invalid) {<mat-error>{{getErrorMessagePasswort2()}}</mat-error>}
-                    @if (passwort2.valid) { <mat-icon matSuffix>check</mat-icon>}
+                    <input matInput [type]="hide ? 'password' : 'text'" required [formControl]="password2">
+                    @if (password2.invalid) {<mat-error>{{getErrorMessagepassword2()}}</mat-error>}
+                    @if (password2.valid) { <mat-icon matSuffix>check</mat-icon>}
                     <mat-hint>{{password_incorrect}}</mat-hint>
                 </mat-form-field>
                 <p>Verwende mindestens acht Zeichen (Groß- und Kleinschreibung beachten) mit mindestens einer Zahl sowie
